--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
+	<link href="/fonts/index.css" rel="stylesheet" />
 	%sveltekit.head%
 </head>
 
