--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/images/favicon.png" />
+	<meta name="theme-color" content="#0a0a0a" />
 	<meta name="viewport" content="width=device-width" />
 	<link href="/fonts/index.css" rel="stylesheet" />
 	<script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.6.1/dist/simpleParallax.min.js"></script>
